--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form id="salesTaxForm">         
           <h3>Input the Purchase Amount</h3>
           <p> 
-            <input type="texg" name="amount" id="amount" autocomplete="off" required>
+            <input type="text" name="amount" id="amount" autocomplete="off" required>
           </p>
           <h3>Input the Tax Rate as a Decimal</h3>
           <p> 
@@ -25,7 +25,8 @@
         </form>
 
         <!-- output -->
-        <h3 id="output"></h3>
+        <h3 id="output1"></h3>
+        <h3 id="output2"></h3>
 
                
         <!-- Footer with first name -->
